version/0.32/_sources/api/solver/_autosummary/settings/phase_15.rst.txt
:orphan:

.. _phase_15:

phase
=====

.. autoclass:: ansys.fluent.core.generated.solver.settings_252.phase_15
    :show-inheritance:

.. rubric:: Methods

========================================   =====================================================

Method                                                                                   Summary

========================================   =====================================================
:ref:`create <create>`                         Create a new instance of the current object type.

:ref:`delete <delete>`                                                  Delete selected objects.

:ref:`rename <rename>`                                                        Rename the object.

:ref:`list <list>`                                                List the names of the objects.

:ref:`list_properties <list_properties>`                   List active properties of the object.

:ref:`make_a_copy <make_a_copy>`                                    Create a copy of the object.

========================================   =====================================================

.. rubric:: Named object type

:ref:`phase_15_child <phase_15_child>`


.. rubric:: Included in:

================================================   =======================================

Parent                                                                             Summary

================================================   =======================================
:ref:`settings_13 <settings_13>`                        Domain name to define settings on.

:ref:`outlet_vent_1_child <outlet_vent_1_child>`       'child_object_type' of outlet_vent.

================================================   =======================================

